Первое приближение сервера и клиента

--- a/docs/arc42/4. Solution Strategy/4. Solution Strategy.md
+++ b/docs/arc42/4. Solution Strategy/4. Solution Strategy.md
@@ -5,8 +5,12 @@
 
 # Стратегии решения особых требований
 
-| Цель / Требование            | Архитектурный подход                              |
-|------------------------------|---------------------------------------------------|
-| Авторизация и аутентификация | Использовать JWT для авторизации и аутентификации |
-| Шифрование данных            | ??                                                |
-| Синхронизация данных         | ??                                                |
+| Цель / Требование            | Архитектурный подход                                                                              |
+|------------------------------|---------------------------------------------------------------------------------------------------|
+| Авторизация и аутентификация | Использовать JWT для авторизации и аутентификации                                                 |
+| Шифрование данных            | Использовать синхронный алгоритм шифрования и шифровать данные на сервере и клиенте поотдельности |
+| Надежность шифрования        | Генерировать вектор, чтобы усложнить брутфорс ключа шифрования                                    |
+| Передача данных по сети      | Использовать TLS для обеспечения безопасности при передаче данных по сети                         |
+| Локальное хранение данных    | Клиент локально хранит данные и может отдавать их пользователю, пока время жизни JWT не истекло   |
+| Синхронизация данных         | Клиент полностью удаляет локальные данные и перезаписывает их, получая от сервета                 |
+| Чтение данных                | Чтение данных реализуется способом синхронизации                                                  |
