--- a/docs/arc42/8. Crosscutting Concepts/8.3 Architecture And Design Patterns.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.3 Architecture And Design Patterns.md
@@ -1,9 +1,7 @@
 # Паттерны проектирования
 
-
 ## Domain Driven Design
 Использование DDD для описания предметной области и сценариев использования.
-
 
 ## Clean Architecture
 Использование чистой архитектуры для разбиения приложения на слои с целью упрощения понимания и масштабирования
@@ -14,6 +12,5 @@
 ## Repository
 Использование данного паттерна для описания и реализации интерфейсов персистирования сущностей в хранилище
 
-
-## Singletone ?
-Не хочется передавать каждый раз контекст сессии и токен для запросов с клиента, но это антипаттерн, поэтому под вопросом.
+## Factory
+Для инициализации клиента и сервера предполагается использование фабрики
