--- a/docs/arc42/8. Crosscutting Concepts/8.5 Security And Safity.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.5 Security And Safity.md
@@ -1,6 +1,7 @@
 # Шифрование на стороне хранилища
 
 Данные на клиенте и сервере шифруются симметричным алгоритмом AES и хранятся в зашифованном виде.
+При шифровании каждый раз генерируется вектор, что не позволит брутфорсом подобрать ключ.
 
 # TLS
 
