--- a/docs/arc42/8. Crosscutting Concepts/8.7 Under-the-hood.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.7 Under-the-hood.md
@@ -1,11 +1,20 @@
-# Персистивность ?
+# Персистенция
+Перед сохранением в базу данных все пользовательские данные зашифровываются
+При извлечении из базы, пользовательские данные остаются зашифрованными до момента передачи по сети
 
 # Обработка транзакций
+На клиенте при создании новых сущностей используются транзакции, так как они порождают bbolt buckets, в случае неудачи и создание buckets должно быть отменено
 
 # Обработка сессий
+Клиент хранит последнюю сессию в базе данных в виде зашифрованного JWT, а также ключи для верификации.
+В случае отстутствия сети, можно будет читать данные, пока токен жив.
 
 # Обработка исключений
+Все исключения бизнес логики перечислены в доменном слое и обрабатываются явно
 
 # Параллелизм / Многопоточность
+Для обеспечения параллелизма операций на стороне сервера используется пул соединений `pgxpool`
 
-# Обработка исключений
+# Валидация
+## Сервер
+На стороне сервера валидация JSON происходит при помощи `validator.v10`
