--- a/docs/arc42/9. Architecture Decisions/9. Architecture Decisions.md
+++ b/docs/arc42/9. Architecture Decisions/9. Architecture Decisions.md
@@ -1,13 +1,4 @@
-# 001. Использование Cobra CLI ?
-### Контекст
-Для клиентского приложения нужно реализовать CLI интерфейс
-### Решение
-Будем использовать Cobra CLI для ускорения работы
-### Последствия
-Мы реализуем клиент с использованием внешней зависимости для ускорения разработки
-
-
-# 002. Использование библиотеки CLI ? +
+# 001. Использование библиотеки CLI
 ### Контекст
 Для клиентского приложения нужно реализовать CLI интерфейс
 ### Решение
@@ -16,16 +7,7 @@
 Мы реализуем клиент с использованием внешней зависимости для ускорения разработки
 
 
-# 003. Использование библиотеки gin ? -
-### Контекст
-Для серверного приложения нужно реализовать RESTful API
-### Решение
-Будем использовать библиотеку gin для ускорения работы
-### Последствия
-Мы реализуем сервер с использованием внешней зависимости для ускорения разработки
-
-
-# 004. Использование библиотеки chi ? +
+# 002. Использование библиотеки chi
 ### Контекст
 Для серверного приложения нужно реализовать RESTful API
 ### Решение
@@ -34,7 +16,7 @@
 Мы реализуем сервер с использованием внешней зависимости для ускорения разработки
 
 
-# 005. Использование библиотеки resty (нужно проверить совместимость с TLS)
+# 003. Использование библиотеки resty
 ### Контекст
 Клиентскому приложению необходимо обмениваться данными с сервером по HTTP
 ### Решение
@@ -43,7 +25,7 @@
 Мы реализуем клиент-серверное взаимодействие с использованием внешней зависимости для ускорения разработки
 
 
-# 006. Передача по сети данных в незашифрованном виде
+# 004. Передача по сети данных в незашифрованном виде
 ### Контекст
 Мы предоставим API от серверной части для самописных клиентов, при использовании API необходимо получать ответы с данными в незашифрованном виде
 ### Решение
@@ -52,7 +34,7 @@
 Мы предоставляем нормальный API, но увеличиваем риски потерять пользовательские данные при передаче
 
 
-# 007. Не реализуем пакетную загрузку данных на сервер
+# 005. Не реализуем пакетную загрузку данных на сервер
 ### Контекст
 Если будет несколько клиентов, которые хранят оффлайн незакоммиченные данные, то обязательно возникнут конфликты
 ### Решение
@@ -61,7 +43,7 @@
 Если пропадет интернет, то локально измененные данные не будут обновлены
 
 
-# 008. Сервер и клиент имеют свои секретные ключи для шифрования данных
+# 006. Сервер и клиент имеют свои секретные ключи для шифрования данных
 ### Контекст
 На клиенте и на сервере данные должны храниться в зашифрованном виде
 ### Решение
@@ -70,7 +52,7 @@
 Если изменится секрет на клиенте или на сервере есть риск больше не расшифровать данные
 
 
-# 009. Все данные всех пользователей на клиенте хранятся в одном файле
+# 007. Все данные всех пользователей на клиенте хранятся в одном файле
 ### Контекст
 На клиенте данные должны храниться в зашифрованном виде и нужно скрыть сколько у какого пользователя хранится определенных данных
 ### Решение
@@ -79,7 +61,7 @@
 Потеря одного файла ведет к риску потерять локальные данные
 
 
-# 010. Необходимо кодогенерировать API
+# 008. Необходимо кодогенерировать API
 ### Контекст
 Для предоставления API пользователям, необходимо поддерживать его всегда в катуальном состоянии
 ### Решение
@@ -88,14 +70,13 @@
 Документация API будет всегда актуальна
 
 
-# 011. Использование SQLite для клиента ? boltdb ? https://pkg.go.dev/encoding/gob
+# 009. Использование bboltdb для клиента
 ### Контекст
-Для хранения не хочется использовать файлы
+Для хранения не хочется самим реализовывать запись в файл
 ### Решение
-Чтобы не использовать файлы, можно использовать embed реляционную базу
+Чтобы не реализовать самостоятельно запись файлы, можно использовать embed базу `bboltdb`
 ### Последствия
-Нужно изменять флоу и шифровать файлы на клиенте также как и на сервере
+Нужно записывать в файл сразу зашифрованные данные, но не шифровать файл. Это может раскрыть сколько ресурсов есть у пользователя и их идентификаторы на стороне сервера.
 
-# 012. Подумать про другую бд на стороне сервера
-# 013. Callback с помощью кафки
+# 013. Callback
 # 014. Интеграция с vault
