--- a/docs/arc42/11. Risks and Technical Debts/11. Risks and Technical Debts.md
+++ b/docs/arc42/11. Risks and Technical Debts/11. Risks and Technical Debts.md
@@ -4,6 +4,9 @@
 |-----------------------------------------------------|------------------------------------------------------------------------------------------------------|
 | Отсутствие команды удаления                         | В задании не было ничего сказано про удаление, реализуем это позже                                   |
 | Используем только access token без refresh token    | Для простоты и уменьшения времени реализуем это позже                                                |
-| Утеря ключа                                         | Это может привести к невозможности расшифровать данные, на клиенте это чинится просто синхронизацией |
-| Использование файла в качестве хранилища на клиенте | Нет уверенности в правильности архитектурного решения                                                |
+| Утеря ключа на клиенте                              | Это может привести к невозможности расшифровать данные, на клиенте это чинится просто синхронизацией |
+| Использование файла в качестве хранилища на клиенте | Файл можно легко похитить и пытаться расшифровать данные                                             |
 | Отсутствие пакетной загрузки на сервер              | Для избежания конфликтов между клиентами пока что не реализуем пакетную загрузку данных на сервер    |
+| Интеграция с Vault                                  | Для более надежного хранения ключей и сертификатов можно использовать Vault                          |
+| На клиенте не получится интегрироваться с Vault     | Иначе клиент не сможет работать оффлайн, так как должен получать ключи и сертификаты по сети         |
+| Невозможность получить конкретный ресурс с сервера  | С сервера можно будет скачать все данные пользователя разом для синхронизации (техдолг)              | 
