Первое приближение - клиент и сервер

--- a/docs/arc42/8. Crosscutting Concepts/8.4 User Expirience.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.4 User Expirience.md
@@ -1,5 +1,14 @@
 # CLI интерфейс
 
-Для улучшения опыта использования необходимо использовать более человекочитаемые команды с использованием флагов.
+CLI интерфейс неудобен.
 
-Однако в настоящий момент неудобно будет вводить бинарные данные с использованием CLI.
+Команды организованы следующим образом
+
+`cli` `comman_name` `args`
+`cli` `resource` `command` `args`
+
+Пример:
+`cli` `register` `username` `password`
+`cli` `text` `create` `"my fancy text to store"`
+`cli` `text` `update` `UUID` `"my new content to update"`
+`cli` `text` `show`
