--- a/docs/arc42/8. Crosscutting Concepts/8.7 Under-the-hood.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.7 Under-the-hood.md
@@ -2,18 +2,28 @@
 Перед сохранением в базу данных все пользовательские данные зашифровываются
 При извлечении из базы, пользовательские данные остаются зашифрованными до момента передачи по сети
 
+На сервере остается открытым структура данных, но сами данные кроме идентификатора зашифрованы.
+При получении из репозитория данные остаются зашифрованные.
+
+На клиенте сам репозиторий зашифровывает и расшифровывает данные, скрывая даже структуру.
+При получении из репозитория данные уже расшифрованы.
+
 # Обработка транзакций
-На клиенте при создании новых сущностей используются транзакции, так как они порождают bbolt buckets, в случае неудачи и создание buckets должно быть отменено
+На клиенте при создании новых сущностей используются транзакции, так как они порождают bbolt buckets, в случае неудачи и создание buckets должно быть отменено.
+
+При синхронизации клиент в пределах транзакции должен удалить bucket с данными, создать заново чистый bucket и сохранить полученные от сервера.
 
 # Обработка сессий
-Клиент хранит последнюю сессию в базе данных в виде зашифрованного JWT, а также ключи для верификации.
-В случае отстутствия сети, можно будет читать данные, пока токен жив.
+Клиент хранит последнюю сессию в базе данных в виде зашифрованного JWT, а также ключи для верификации (также в зашифрованном виде).
+В случае отстутствия сети, можно будет читать локальные данные, пока токен жив.
 
 # Обработка исключений
 Все исключения бизнес логики перечислены в доменном слое и обрабатываются явно
+Исключения логгируются на самом последнем слое (presentation)
 
 # Параллелизм / Многопоточность
 Для обеспечения параллелизма операций на стороне сервера используется пул соединений `pgxpool`
+На стороне клиента `bboltdb` параллелизм реализован блокированием ресурса
 
 # Валидация
 ## Сервер
