--- a/docs/arc42/9. Architecture Decisions/9. Architecture Decisions.md
+++ b/docs/arc42/9. Architecture Decisions/9. Architecture Decisions.md
@@ -78,5 +78,5 @@
 ### Последствия
 Нужно записывать в файл сразу зашифрованные данные, но не шифровать файл. Это может раскрыть сколько ресурсов есть у пользователя и их идентификаторы на стороне сервера.
 
-# 013. Callback
-# 014. Интеграция с vault
+# 013. Callback (Техдолг)
+# 014. Интеграция с vault (Техдолг)
