--- a/docs/arc42/8. Crosscutting Concepts/8.5 Security And Safity.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.5 Security And Safity.md
@@ -1,7 +1,12 @@
 # Шифрование на стороне хранилища
 
 Данные на клиенте и сервере шифруются симметричным алгоритмом AES и хранятся в зашифованном виде.
-При шифровании каждый раз генерируется вектор, что не позволит брутфорсом подобрать ключ.
+При шифровании каждый раз генерируется вектор (соль), что не позволит брутфорсом подобрать ключ.
+
+На сервере шифруются конкретные поля данных пользователя (обычно все, кроме идентификатора данных).
+Таким образом данные друг от друга можно отличить только по уникальному идентификатору.
+
+На клиенте данные шифрует сам репозиторий при сохранении, таким образом, скрывая даже структуру данных.
 
 # TLS
 
