--- a/docs/arc42/8. Crosscutting Concepts/8.8 Operation Concepts.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.8 Operation Concepts.md
@@ -1,2 +1,2 @@
 # Мониторинг и логгирование
-Каждый запрос к серверу мониторится в `middleware`, при этом вычисляется длительность выполнения запроса.
+Каждый запрос к серверу мониторится в `middleware`, при этом вычисляется время выполнения запроса.
