--- a/docs/arc42/8. Crosscutting Concepts/8.4 User Expirience.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.4 User Expirience.md
@@ -4,11 +4,11 @@ CLI интерфейс неудобен.
 
 Команды организованы следующим образом
 
-`cli` `comman_name` `args`
-`cli` `resource` `command` `args`
+- `cli` `comman_name` `args`
+- `cli` `resource` `command` `args`
 
-Пример:
-`cli` `register` `username` `password`
-`cli` `text` `create` `"my fancy text to store"`
-`cli` `text` `update` `UUID` `"my new content to update"`
-`cli` `text` `show`
+## Примеры:
+- `cli` `register` `username` `password`
+- `cli` `text` `create` `"my fancy text to store"`
+- `cli` `text` `update` `UUID` `"my new content to update"`
+- `cli` `text` `show`
