--- a/docs/arc42/8. Crosscutting Concepts/8.6 Development Concepts.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.6 Development Concepts.md
@@ -47,11 +47,12 @@ Dynamic rules are written declaratively with AST patterns, filters, report messa
 - `unused`: Checks Go code for unused constants, variables, functions and types.
 - `whitespace`: Whitespace is a linter that checks for unnecessary newlines at the start and end of functions, if, for, etc.
 
-
 # Тестирование
 Код должен быть покрыт тестами не менее, чем на 80%
 Интеграционные тесты выполняются на реальной базе данных, поэтому необходимо обеспечить их независимость и воспроизводимость.
 
+Для ускорения процесса написания тестов, используются интеграционные тесты.
+В CLI приложении используется фейковая реализация HTTP клиента для возможности тестирования изолированно от сервера.
 
 # Генерация кода
 Необходимо использовать `oapi-codegen` для генерации API сервера
