Добавлен тип данных "Банковская карта" для клиента

--- a/docs/arc42/9. Architecture Decisions/9. Architecture Decisions.md
+++ b/docs/arc42/9. Architecture Decisions/9. Architecture Decisions.md
@@ -65,7 +65,7 @@
 ### Контекст
 Для предоставления API пользователям, необходимо поддерживать его всегда в катуальном состоянии
 ### Решение
-Чтобы экономить время, лучше использовать генератор API, например `https://github.com/go-swagger/go-swagger/tree/master`
+Чтобы экономить время, лучше использовать генератор API, например `https://github.com/swaggo/swag`
 ### Последствия
 Документация API будет всегда актуальна
 
