Ручная синхронизация текстовых данных

--- a/docs/arc42/11. Risks and Technical Debts/11. Risks and Technical Debts.md
+++ b/docs/arc42/11. Risks and Technical Debts/11. Risks and Technical Debts.md
@@ -10,3 +10,4 @@
 | Интеграция с Vault                                  | Для более надежного хранения ключей и сертификатов можно использовать Vault                          |
 | На клиенте не получится интегрироваться с Vault     | Иначе клиент не сможет работать оффлайн, так как должен получать ключи и сертификаты по сети         |
 | Невозможность получить конкретный ресурс с сервера  | С сервера можно будет скачать все данные пользователя разом для синхронизации (техдолг)              | 
+| Рефакторинг кодовой базы                            | Из-за недостаточного времени для разработки не была произведена генерализация кодовой базы           |
