На сервер добавлено сжатие данных и запрос на получение всего контента

--- a/docs/arc42/9. Architecture Decisions/9. Architecture Decisions.md
+++ b/docs/arc42/9. Architecture Decisions/9. Architecture Decisions.md
@@ -60,8 +60,24 @@
 ### Последствия
 Потеря одного файла ведет к риску потерять локальные данные
 
+# 008. На сервере структура данных остается открытой, но значения шифруются
+### Контекст
+Мы должны хранить все данные пользователей в зашифрованном виде, но нужно оставить возможность для простой миграции данных
+### Решение
+Структура данных остается открытой, шифруются только значения
+### Последствия
+Если злоумышленник получит доступ к бд на сервере, ему будет проще найти интересующие его зашифрованные данные
 
-# 008. Необходимо кодогенерировать API
+# 009. На клиенте данные шифруются полностью, вместе со структурой
+### Контекст
+Мы должны хранить все данные пользователей в зашифрованном виде, но вероятность утечки пользовательского файла крайне выше, чем на сервере.
+### Решение
+Данные шифруются целиком на стороне клиента логикой репозитория
+### Последствия
+Если злоумышленник получит доступ к файлу с пользовательскими данными, он сможет выделить только коллекции данных и уникальные идентификаторы
+
+
+# 010. Необходимо кодогенерировать API
 ### Контекст
 Для предоставления API пользователям, необходимо поддерживать его всегда в катуальном состоянии
 ### Решение
@@ -70,7 +86,7 @@
 Документация API будет всегда актуальна
 
 
-# 009. Использование bboltdb для клиента
+# 011. Использование bboltdb для клиента
 ### Контекст
 Для хранения не хочется самим реализовывать запись в файл
 ### Решение
@@ -78,5 +94,10 @@
 ### Последствия
 Нужно записывать в файл сразу зашифрованные данные, но не шифровать файл. Это может раскрыть сколько ресурсов есть у пользователя и их идентификаторы на стороне сервера.
 
-# 013. Callback (Техдолг)
-# 014. Интеграция с vault (Техдолг)
+# 012. Использование одного запроса на синхронизацию всего контента
+### Контекст
+Чтобы клиент синхронизировал данные с сервером можно использовать несколько асинхронных ресурсов для получения контента, либо один большой
+### Решение
+Использовать один запрос на получение всего контента, но с использованием сжатия
+### Последствия
+В случае сбоя сети необходимо будет делать большой запрос повторно
