Добавлена ручная синхронизация для паролей и банковских карт для клиента

--- a/docs/arc42/9. Architecture Decisions/9. Architecture Decisions.md
+++ b/docs/arc42/9. Architecture Decisions/9. Architecture Decisions.md
@@ -101,3 +101,11 @@
 Использовать один запрос на получение всего контента, но с использованием сжатия
 ### Последствия
 В случае сбоя сети необходимо будет делать большой запрос повторно
+
+# 013. Использование фасадов (оъединение нескольких сценариев использования в один)
+### Контекст
+При большом количестве CRUD сценариев, их становится слишком много и в них становится тяжело ориентироваться
+### Решение
+Использовать фасад и объединять несколько сценариев в один с возможностью вызвать вложенный сценарий
+### Последствия
+Дополнительный слой абстракции немного увеличит количество сущностей, но упростит вызов бизнес логики при использовании автодописывания
