--- a/docs/arc42/8. Crosscutting Concepts/8.3 Architecture And Design Patterns.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.3 Architecture And Design Patterns.md
@@ -14,3 +14,9 @@
 
 ## Factory
 Для инициализации клиента и сервера предполагается использование фабрики
+
+## UseCase
+Явно выделяем интерфейсы сценарием использования и также явно их реализуем. Это наплодит сущностей, но сделает бизнес логику и другие слои независимыми друг от друга
+
+## Facade
+Так как сценариев использования стало слишком много, необходимо объединить их в фасад, чтобы было проще ориентироваться и явно экспортировать всю доступную для исполнения бизнес логику
