--- a/docs/arc42/8. Crosscutting Concepts/8.3 Architecture And Design Patterns.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.3 Architecture And Design Patterns.md
@@ -20,3 +20,6 @@
 
 ## Facade
 Так как сценариев использования стало слишком много, необходимо объединить их в фасад, чтобы было проще ориентироваться и явно экспортировать всю доступную для исполнения бизнес логику
+
+## Unit Of Work
+Используется для транзакционной целостности синхронизации данных на клиенте
