--- a/docs/arc42/8. Crosscutting Concepts/8.4 User Expirience.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.4 User Expirience.md
@@ -1,14 +1,19 @@
 # CLI интерфейс
 
-CLI интерфейс неудобен.
+CLI интерфейс вызывает определенные неудобства.
+Необходимо организовать команды больше похожие на естественный язык.
+Поэтому команды строятся по примеру `действие` `название ресурса` `флаги и аргументы`
 
-Команды организованы следующим образом
+Например, `gophkeeper create text "content string"`, вместо `gophkeeper text create "content string"`
 
-- `cli` `comman_name` `args`
-- `cli` `resource` `command` `args`
+При этом для коменд синхронизации и вывода необходимо указывать множественное число, так как работа происходит с нексколькими экземплярами
 
-## Примеры:
-- `cli` `register` `username` `password`
-- `cli` `text` `create` `"my fancy text to store"`
-- `cli` `text` `update` `UUID` `"my new content to update"`
-- `cli` `text` `show`
+Например, `gophkeeper show binaries` вместо `gophkeeper show binary`
+
+Также необходимо использовать дефиз вместо нижнего подчеркивания, так как нажать одну кнопку быстрее, чем комбинацию из 2х клавиш
+
+Например, `gophkeeper update bank-card --number "new value" --valid-thru "new value" --cvv "new value" --card-holder "new value" 94ac4f90-0594-4aab-8593-9995c47f32ef` вместо `gophkeeper update bank_card --number "new value" --valid_thru "new value" --cvv "new value" --card_holder "new value" 94ac4f90-0594-4aab-8593-9995c47f32ef`
+
+Для обновления данных учитываем, что пользователь может хотеть обновить только один атрибут, а значит он не должен вводить все значения, а только те, которые хочет обновить.
+
+Например, `gophkeeper update credentials --name "new name" 465afb00-2088-428d-9b28-149059a551a0` вместо `gophkeeper update credentials 465afb00-2088-428d-9b28-149059a551a0 "new name" "old login" "old password"`	
