--- a/docs/arc42/4. Solution Strategy/4. Solution Strategy.md
+++ b/docs/arc42/4. Solution Strategy/4. Solution Strategy.md
@@ -3,14 +3,22 @@
 - Реализовать серверную и клиентскую часть на языке go с минимальным количеством внешних зависимостей
 - Использовать протокол REST для клиент-серверного взаимодействия 
 
+Использовать следующие подходы для решения задачи:
+
+## Domain Driven Design
+Использование DDD для описания предметной области и сценариев использования.
+
+## Clean Architecture
+Использование чистой архитектуры для разбиения приложения на слои с целью упрощения понимания и масштабирования
+
 # Стратегии решения особых требований
 
-| Цель / Требование            | Архитектурный подход                                                                              |
-|------------------------------|---------------------------------------------------------------------------------------------------|
-| Авторизация и аутентификация | Использовать JWT для авторизации и аутентификации                                                 |
-| Шифрование данных            | Использовать синхронный алгоритм шифрования и шифровать данные на сервере и клиенте поотдельности |
-| Надежность шифрования        | Генерировать вектор, чтобы усложнить брутфорс ключа шифрования                                    |
-| Передача данных по сети      | Использовать TLS для обеспечения безопасности при передаче данных по сети                         |
-| Локальное хранение данных    | Клиент локально хранит данные и может отдавать их пользователю, пока время жизни JWT не истекло   |
-| Синхронизация данных         | Клиент полностью удаляет локальные данные и перезаписывает их, получая от сервета                 |
-| Чтение данных                | Чтение данных реализуется способом синхронизации                                                  |
+| Цель / Требование              | Архитектурный подход                                                                              |
+|--------------------------------|---------------------------------------------------------------------------------------------------|
+| Авторизация и аутентификация   | Использовать JWT для авторизации и аутентификации                                                 |
+| Шифрование данных              | Использовать синхронный алгоритм шифрования и шифровать данные на сервере и клиенте поотдельности |
+| Надежность шифрования          | Генерировать вектор (соль), чтобы усложнить брутфорс ключа шифрования                             |
+| Передача данных по сети        | Использовать TLS 1.3 для обеспечения безопасности при передаче данных по сети                     |
+| Локальное хранение данных      | Клиент локально хранит данные и может отдавать их пользователю, пока время жизни JWT не истекло   |
+| Синхронизация удаленной записи | Клиент сохраняет локальные данные только после успешного ответа от сервера                        |
+| Синхронизация чтения           | Клиент полностью удаляет локальные данные и перезаписывает их, получая от сервета                 |
