Поле "метаданные" для логинов/паролей и банковских карт. Документация

--- a/docs/arc42/11. Risks and Technical Debts/11. Risks and Technical Debts.md
+++ b/docs/arc42/11. Risks and Technical Debts/11. Risks and Technical Debts.md
@@ -1,4 +1,4 @@
-# Риски и техдолг
+# Риски и технический долг
 
 | Наименование                                             | Описание                                                                                                  |
 |----------------------------------------------------------|-----------------------------------------------------------------------------------------------------------|
