--- a/docs/arc42/4. Solution Strategy/4. Solution Strategy.md
+++ b/docs/arc42/4. Solution Strategy/4. Solution Strategy.md
@@ -13,12 +13,12 @@
 
 # Стратегии решения особых требований
 
-| Цель / Требование              | Архитектурный подход                                                                              |
-|--------------------------------|---------------------------------------------------------------------------------------------------|
-| Авторизация и аутентификация   | Использовать JWT для авторизации и аутентификации                                                 |
-| Шифрование данных              | Использовать синхронный алгоритм шифрования и шифровать данные на сервере и клиенте поотдельности |
-| Надежность шифрования          | Генерировать вектор (соль), чтобы усложнить брутфорс ключа шифрования                             |
-| Передача данных по сети        | Использовать TLS 1.3 для обеспечения безопасности при передаче данных по сети                     |
-| Локальное хранение данных      | Клиент локально хранит данные и может отдавать их пользователю, пока время жизни JWT не истекло   |
-| Синхронизация удаленной записи | Клиент сохраняет локальные данные только после успешного ответа от сервера                        |
-| Синхронизация чтения           | Клиент полностью удаляет локальные данные и перезаписывает их, получая от сервета                 |
+| Цель / Требование            | Архитектурный подход                                                                               |
+|------------------------------|----------------------------------------------------------------------------------------------------|
+| Авторизация и аутентификация | Использовать JWx для авторизации и аутентификации                                                  |
+| Шифрование данных            | Использовать синхронный алгоритм шифрования и шифровать данные на сервере и клиенте по отдельности |
+| Надежность шифрования        | Генерировать вектор (соль), чтобы усложнить брутфорс ключа шифрования                              |
+| Передача данных по сети      | Использовать TLS 1.3 для обеспечения безопасности при передаче данных по сети                      |
+| Локальное хранение данных    | Клиент локально хранит данные и может отдавать их пользователю, пока время жизни JWT не истекло    |
+| Синхронная запись            | Клиент сохраняет локальные данные только после успешного ответа от сервера                         |
+| Синхронизация при чтении     | Клиент полностью удаляет локальные данные и перезаписывает их, получая от сервера                  |
