--- a/docs/arc42/8. Crosscutting Concepts/8.6 Development Concepts.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.6 Development Concepts.md
@@ -55,7 +55,7 @@ Dynamic rules are written declaratively with AST patterns, filters, report messa
 В CLI приложении используется фейковая реализация HTTP клиента для возможности тестирования изолированно от сервера.
 
 # Генерация кода
-Необходимо использовать `oapi-codegen` для генерации API сервера
+Необходимо использовать `swaggo swag` для генерации API сервера
 
 # Миграции БД
-Для миграции используется инструмент `golang-migrate`
+Для миграции используется отдельный инструмент `golang-migrate`, вместо того, чтобы вызывать миграции прямо из кода, например, при запуске
