--- a/docs/arc42/8. Crosscutting Concepts/8.3 Architecture And Design Patterns.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.3 Architecture And Design Patterns.md
@@ -1,13 +1,13 @@
 # Паттерны проектирования
 
 ## Command
-Использования паттерна комадна в CLI клиенте
+Использование паттерна комадна в CLI приложении
 
 ## Repository
 Использование данного паттерна для описания и реализации интерфейсов персистирования сущностей в хранилище
 
 ## Factory
-Для инициализации клиента и сервера предполагается использование фабрики
+Для инициализации клиента и сервера предполагается использование фабрик
 
 ## UseCase
 Явно выделяем интерфейсы сценарием использования и также явно их реализуем. Это наплодит сущностей, но сделает бизнес логику и другие слои независимыми друг от друга
@@ -16,4 +16,4 @@
 Так как сценариев использования стало слишком много, необходимо объединить их в фасад, чтобы было проще ориентироваться и явно экспортировать всю доступную для исполнения бизнес логику
 
 ## Unit Of Work
-Используется для транзакционной целостности синхронизации данных на клиенте
+Используется для изоляции логики обеспечения транзакционной целостности при синхронизации данных на клиенте
