--- a/docs/arc42/8. Crosscutting Concepts/8.5 Security And Safity.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.5 Security And Safity.md
@@ -1,6 +1,6 @@
 # Шифрование на стороне хранилища
 
-Данные на клиенте и сервере шифруются симметричным алгоритмом AES и хранятся в зашифованном виде.
+Данные на клиенте и сервере шифруются симметричным алгоритмом AES и хранятся в зашифрованном виде.
 При шифровании каждый раз генерируется вектор (соль), что не позволит брутфорсом подобрать ключ.
 
 На сервере шифруются конкретные поля данных пользователя (обычно все, кроме идентификатора данных).
@@ -10,4 +10,4 @@
 
 # TLS
 
-Данные между клиентом и сервером передаются в незашифрованном виде, однако сам канал передачи шифруется при помощи TLS. В отличае от SSL здесь не получится получить данные прямо в канале (Man In The Middle). Это решает многие проблемы, так как клиент и сервер будут иметь свои ключи шифрования, которые они не будут передавать по сети.
+Данные между клиентом и сервером передаются в незашифрованном виде, однако сам канал передачи шифруется при помощи TLS. В отличие от SSL здесь не получится получить данные прямо в канале (Man In The Middle). Это решает многие проблемы, так как клиент и сервер будут иметь свои ключи шифрования, которые они не будут передавать по сети.
