--- a/docs/arc42/8. Crosscutting Concepts/8.7 Under-the-hood.md
+++ b/docs/arc42/8. Crosscutting Concepts/8.7 Under-the-hood.md
@@ -2,11 +2,11 @@
 Перед сохранением в базу данных все пользовательские данные зашифровываются
 При извлечении из базы, пользовательские данные остаются зашифрованными до момента передачи по сети
 
-На сервере остается открытым структура данных, но сами данные кроме идентификатора зашифрованы.
-При получении из репозитория данные остаются зашифрованные.
+На сервере остается открытой структура данных, но сами данные кроме идентификатора зашифрованы.
+При получении данных из репозитория, они остаются зашифрованные.
 
 На клиенте сам репозиторий зашифровывает и расшифровывает данные, скрывая даже структуру.
-При получении из репозитория данные уже расшифрованы.
+При получении данных из репозитория - они уже расшифрованы.
 
 # Обработка транзакций
 На клиенте при создании новых сущностей используются транзакции, так как они порождают bbolt buckets, в случае неудачи и создание buckets должно быть отменено.
@@ -15,16 +15,19 @@
 
 # Обработка сессий
 Клиент хранит последнюю сессию в базе данных в виде зашифрованного JWT, а также ключи для верификации (также в зашифрованном виде).
-В случае отстутствия сети, можно будет читать локальные данные, пока токен жив.
+В случае отсутствия сети, можно будет читать локальные данные, пока токен жив.
 
 # Обработка исключений
 Все исключения бизнес логики перечислены в доменном слое и обрабатываются явно
 Исключения логгируются на самом последнем слое (presentation)
 
 # Параллелизм / Многопоточность
-Для обеспечения параллелизма операций на стороне сервера используется пул соединений `pgxpool`
-На стороне клиента `bboltdb` параллелизм реализован блокированием ресурса
+Для обеспечения параллелизма операций на стороне сервера используется пул соединений `pgxpool`. Допускается паралеллизм при чтении данных из нескольких источников (репозиториев), например, при выдаче всех пользовательских данных.
+
+На стороне клиента `bboltdb` поддерживает паралеллизм путем блокированиея ресурса
 
 # Валидация
 ## Сервер
 На стороне сервера валидация JSON происходит при помощи `validator.v10`
+## Клиент
+На стороне клиента валидация введенных аргументов происходит штатными средствами го (например, при помощи регулярных выражений)
